# glium_shapes

./: .travis.yml  Cargo.toml  LICENSE  README.md  index.html  search-index.js
examples/: axes.rs  cuboid.rs  quad.rs  sphere.rs
examples/common/: mod.rs
glium_shapes/: index.html  sidebar-items.js
glium_shapes/axes/: AxesBuilder.t.html  index.html  sidebar-items.js  struct.Axes.html  struct.AxesBuilder.html
glium_shapes/cuboid/: CuboidBuilder.t.html  index.html  sidebar-items.js  struct.Cuboid.html  struct.CuboidBuilder.html
glium_shapes/errors/: ShapeCreationError.t.html  enum.ShapeCreationError.html  index.html  sidebar-items.js
glium_shapes/quad/: Quad.t.html  QuadBuilder.t.html  index.html  sidebar-items.js  struct.Quad.html  struct.QuadBuilder.html
glium_shapes/sphere/: Sphere.t.html  SphereBuilder.t.html  index.html  sidebar-items.js  struct.Sphere.html  struct.SphereBuilder.html
glium_shapes/vertex/: index.html  sidebar-items.js  struct.Vertex.html
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.From.js  trait.Into.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js
implementors/glium/vertex/: trait.IntoVerticesSource.js  trait.Vertex.js
implementors/std/error/: trait.Error.js
src/: axes.rs  cuboid.rs  errors.rs  lib.rs  quad.rs  sphere.rs  vertex.rs
src/glium_shapes/: axes.rs.html  cuboid.rs.html  errors.rs.html  lib.rs.html  quad.rs.html  sphere.rs.html  vertex.rs.html
