[package]
name = "glium_shapes"
description = "Prefabricated shapes for the Glium OpenGL library."
version = "0.1.0"
license = "MIT"
authors = ["James Bird <jbrd@users.noreply.github.com>"]
repository = "https://github.com/jbrd/glium_shapes.git"
homepage = "https://github.com/jbrd/glium_shapes.git"
readme = "README.md"

[dependencies]
approx = "~0.1.1"
cgmath = "~0.12.0"
glium = "~0.16.0"
