[package]
name = "glium_shapes"
description = "Prefabricated shapes for the Glium OpenGL library."
version = "0.1.1"
license = "MIT"
authors = ["James Bird <jbrd@users.noreply.github.com>"]
repository = "https://github.com/jbrd/glium_shapes.git"
homepage = "https://github.com/jbrd/glium_shapes.git"
documentation = "http://jbrd.github.io/glium_shapes"
readme = "README.md"
edition = "2018"

[dependencies]
approx = "~0.3"
cgmath = "~0.17"
glium = "~0.25"
